--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lemdorot/Legalide.git"
+    "url": "git+https://github.com/lemdorot/GPS.git"
   },
   "browserslist": [
     "last 3 versions"
@@ -22,9 +22,9 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/lemdorot/Legalide/issues"
+    "url": "https://github.com/lemdorot/GPS/issues"
   },
-  "homepage": "https://github.com/lemdorot/Legalide#readme",
+  "homepage": "https://github.com/lemdorot/GPS#readme",
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
